# tych-split

./: README.md  process-tych.py  pyproject.toml  requirements.txt
